--- a/WEBSITE/frontend/package.json
+++ b/WEBSITE/frontend/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@chakra-ui/react": "^3.24.2",
     "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@tailwindcss/vite": "^4.1.11",
     "@types/react-router-dom": "^5.3.3",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.539.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
