update backend and google maps

--- a/WEBSITE/frontend/tsconfig.app.json
+++ b/WEBSITE/frontend/tsconfig.app.json
@@ -6,6 +6,9 @@
     "lib": ["ES2022", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "allowJs": true,
+    "checkJs": false,
+    "noImplicitAny": false,
     "paths": {
       "@/*": ["./src/*"]
     },
