--- a/WEBSITE/frontend/package.json
+++ b/WEBSITE/frontend/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
+    "@types/google.maps": "^3.58.1",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "@types/react-select": "^5.0.0",
