--- a/WEBSITE/backend/package.json
+++ b/WEBSITE/backend/package.json
@@ -11,8 +11,9 @@
   "dependencies": {
     "axios": "^1.11.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.6.1",
     "express": "^5.1.0",
     "firebase-admin": "^13.4.0",
-    "dotenv": "^16.3.1"
+    "googleapis": "^156.0.0"
   }
 }
