--- a/WEBSITE/backend/package.json
+++ b/WEBSITE/backend/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "backend",
+  "name": "vismed-backend",
   "version": "1.0.0",
   "description": "Backend VISMED website",
   "main": "server.js",
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
+    "dev": "node server.js",
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.55.0",
     "axios": "^1.11.0",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
-    "express": "^5.1.0",
+    "express": "^4.19.2",
     "firebase-admin": "^13.4.0",
     "googleapis": "^156.0.0"
   }
