--- a/WEBSITE/backend/package.json
+++ b/WEBSITE/backend/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.6.1",
     "express": "^4.19.2",
     "firebase-admin": "^13.4.0",
-    "googleapis": "^156.0.0"
+    "googleapis": "^156.0.0",
+    "http-proxy": "^1.18.1"
   }
 }
