--- a/WEBSITE/frontend/package.json
+++ b/WEBSITE/frontend/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/transition": "^2.1.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@supabase/supabase-js": "^2.57.0",
     "@tailwindcss/vite": "^4.1.11",
     "@types/react-router-dom": "^5.3.3",
     "framer-motion": "^12.23.12",
