--- a/WEBSITE/backend/package.json
+++ b/WEBSITE/backend/package.json
@@ -10,11 +10,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.55.0",
+    "@supabase/supabase-js": "^2.58.0",
     "axios": "^1.11.0",
+    "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
-    "express": "^4.19.2",
+    "express": "^4.21.2",
     "firebase-admin": "^13.4.0",
     "googleapis": "^156.0.0",
     "http-proxy": "^1.18.1"
