--- a/WEBSITE/frontend/package.json
+++ b/WEBSITE/frontend/package.json
@@ -18,11 +18,13 @@
     "@tailwindcss/vite": "^4.1.11",
     "@types/react-router-dom": "^5.3.3",
     "framer-motion": "^12.23.12",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.539.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.8.0",
     "react-select": "^5.10.2",
     "tailwindcss": "^4.1.11"
