--- a/WEBSITE/frontend/package.json
+++ b/WEBSITE/frontend/package.json
@@ -44,6 +44,7 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.0",
     "vite": "^7.1.3",
+    "vite-plugin-static-copy": "^3.1.3",
     "vite-tsconfig-paths": "^5.1.4"
   },
   "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
