--- a/n8n-railway/.env
+++ b/n8n-railway/.env
@@ -6,5 +6,5 @@ TZ=Asia/Jakarta
 N8N_DISABLE_EXTERNAL_MODULES=false
 N8N_EXTERNAL_MODULES_ALLOW_LIST=axios,form-data
 
-# Ganti URL ini setelah Railway deploy (sementara pakai placeholder)
+# Ganti setelah Railway deploy (sementara placeholder)
 WEBHOOK_URL=https://your-railway-url.up.railway.app
