--- a/n8n-railway/Dockerfile
+++ b/n8n-railway/Dockerfile
@@ -1,10 +1,18 @@
 # Gunakan image resmi n8n
 FROM n8nio/n8n:latest
 
-# Salin file .env ke direktori config n8n
-COPY .env /home/node/.n8n/.env
-
-# Set environment
+# Set timezone & port custom
+ENV GENERIC_TIMEZONE=Asia/Jakarta
+ENV TZ=Asia/Jakarta
 ENV N8N_PORT=1234
 ENV N8N_HOST=0.0.0.0
+ENV N8N_DISABLE_EXTERNAL_MODULES=false
+ENV N8N_EXTERNAL_MODULES_ALLOW_LIST=axios,form-data
+
+# Salin .env agar variabel environment juga dibaca
+COPY .env /home/node/.n8n/.env
+
 EXPOSE 1234
+
+# Jalankan n8n
+CMD ["n8n", "start"]
